src/com/alchitry/labs/lucid/parser/LucidParser.java
// Generated from Lucid.g4 by ANTLR 4.5.3

package com.alchitry.labs.lucid.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LucidParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		HEX=60, BIN=61, DEC=62, REAL=63, INT=64, STRING=65, SIGNED=66, TYPE_ID=67, 
		CONST_ID=68, SPACE_ID=69, FUNCTION_ID=70, BLOCK_COMMENT=71, COMMENT=72, 
		WS=73;
	public static final int
		RULE_source = 0, RULE_global = 1, RULE_global_stat = 2, RULE_module = 3, 
		RULE_param_list = 4, RULE_port_list = 5, RULE_param_dec = 6, RULE_port_dec = 7, 
		RULE_input_dec = 8, RULE_output_dec = 9, RULE_inout_dec = 10, RULE_param_name = 11, 
		RULE_param_constraint = 12, RULE_array_size = 13, RULE_struct_type = 14, 
		RULE_module_body = 15, RULE_stat = 16, RULE_const_dec = 17, RULE_assign_block = 18, 
		RULE_sig_con = 19, RULE_param_con = 20, RULE_type_dec = 21, RULE_dff_single = 22, 
		RULE_var_dec = 23, RULE_sig_dec = 24, RULE_dff_dec = 25, RULE_fsm_dec = 26, 
		RULE_fsm_states = 27, RULE_module_inst = 28, RULE_inst_cons = 29, RULE_con_list = 30, 
		RULE_connection = 31, RULE_struct_member = 32, RULE_struct_dec = 33, RULE_always_block = 34, 
		RULE_always_stat = 35, RULE_block = 36, RULE_assign_stat = 37, RULE_array_index = 38, 
		RULE_bit_selector = 39, RULE_bit_selection = 40, RULE_signal = 41, RULE_case_stat = 42, 
		RULE_case_elem = 43, RULE_if_stat = 44, RULE_else_stat = 45, RULE_for_stat = 46, 
		RULE_function = 47, RULE_number = 48, RULE_expr = 49, RULE_var_assign = 50, 
		RULE_name = 51;
	public static final String[] ruleNames = {
		"source", "global", "global_stat", "module", "param_list", "port_list", 
		"param_dec", "port_dec", "input_dec", "output_dec", "inout_dec", "param_name", 
		"param_constraint", "array_size", "struct_type", "module_body", "stat", 
		"const_dec", "assign_block", "sig_con", "param_con", "type_dec", "dff_single", 
		"var_dec", "sig_dec", "dff_dec", "fsm_dec", "fsm_states", "module_inst", 
		"inst_cons", "con_list", "connection", "struct_member", "struct_dec", 
		"always_block", "always_stat", "block", "assign_stat", "array_index", 
		"bit_selector", "bit_selection", "signal", "case_stat", "case_elem", "if_stat", 
		"else_stat", "for_stat", "function", "number", "expr", "var_assign", "name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'global'", "'{'", "'}'", "';'", "'module'", "'#('", "','", "')'", 
		"'('", "':'", "'input'", "'output'", "'inout'", "'='", "'['", "']'", "'<'", 
		"'.'", "'>'", "'const'", "'#'", "'var'", "'sig'", "'dff'", "'fsm'", "'struct'", 
		"'always'", "'+'", "'-'", "'case'", "'default'", "'if'", "'else'", "'for'", 
		"'c{'", "'x{'", "'~'", "'!'", "'*'", "'/'", "'>>'", "'<<'", "'<<<'", "'>>>'", 
		"'|'", "'&'", "'^'", "'~^'", "'~&'", "'~|'", "'=='", "'!='", "'>='", "'<='", 
		"'||'", "'&&'", "'?'", "'++'", "'--'", null, null, null, null, null, null, 
		"'signed'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"HEX", "BIN", "DEC", "REAL", "INT", "STRING", "SIGNED", "TYPE_ID", "CONST_ID", 
		"SPACE_ID", "FUNCTION_ID", "BLOCK_COMMENT", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lucid.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LucidParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceContext extends ParserRuleContext {
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__4) {
				{
				setState(106);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(104);
					global();
					}
					break;
				case T__4:
					{
					setState(105);
					module();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<Global_statContext> global_stat() {
			return getRuleContexts(Global_statContext.class);
		}
		public Global_statContext global_stat(int i) {
			return getRuleContext(Global_statContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitGlobal(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__0);
			setState(112);
			name();
			setState(113);
			match(T__1);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19 || _la==T__25) {
				{
				{
				setState(114);
				global_stat();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_statContext extends ParserRuleContext {
		public Struct_decContext struct_dec() {
			return getRuleContext(Struct_decContext.class,0);
		}
		public Const_decContext const_dec() {
			return getRuleContext(Const_decContext.class,0);
		}
		public Global_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterGlobal_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitGlobal_stat(this);
		}
	}

	public final Global_statContext global_stat() throws RecognitionException {
		Global_statContext _localctx = new Global_statContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global_stat);
		try {
			setState(126);
			switch (_input.LA(1)) {
			case T__25:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				struct_dec();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				const_dec();
				setState(124);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Port_listContext port_list() {
			return getRuleContext(Port_listContext.class,0);
		}
		public Module_bodyContext module_body() {
			return getRuleContext(Module_bodyContext.class,0);
		}
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__4);
			setState(129);
			name();
			setState(131);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(130);
				param_list();
				}
			}

			setState(133);
			port_list();
			setState(134);
			module_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<Param_decContext> param_dec() {
			return getRuleContexts(Param_decContext.class);
		}
		public Param_decContext param_dec(int i) {
			return getRuleContext(Param_decContext.class,i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitParam_list(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__5);
			setState(137);
			param_dec();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(138);
				match(T__6);
				setState(139);
				param_dec();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_listContext extends ParserRuleContext {
		public List<Port_decContext> port_dec() {
			return getRuleContexts(Port_decContext.class);
		}
		public Port_decContext port_dec(int i) {
			return getRuleContext(Port_decContext.class,i);
		}
		public Port_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterPort_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitPort_list(this);
		}
	}

	public final Port_listContext port_list() throws RecognitionException {
		Port_listContext _localctx = new Port_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_port_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__8);
			setState(148);
			port_dec();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(149);
				match(T__6);
				setState(150);
				port_dec();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_decContext extends ParserRuleContext {
		public Param_nameContext param_name() {
			return getRuleContext(Param_nameContext.class,0);
		}
		public Param_constraintContext param_constraint() {
			return getRuleContext(Param_constraintContext.class,0);
		}
		public Param_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterParam_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitParam_dec(this);
		}
	}

	public final Param_decContext param_dec() throws RecognitionException {
		Param_decContext _localctx = new Param_decContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			param_name();
			setState(161);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(159);
				match(T__9);
				setState(160);
				param_constraint();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Port_decContext extends ParserRuleContext {
		public Input_decContext input_dec() {
			return getRuleContext(Input_decContext.class,0);
		}
		public Output_decContext output_dec() {
			return getRuleContext(Output_decContext.class,0);
		}
		public Inout_decContext inout_dec() {
			return getRuleContext(Inout_decContext.class,0);
		}
		public Port_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterPort_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitPort_dec(this);
		}
	}

	public final Port_decContext port_dec() throws RecognitionException {
		Port_decContext _localctx = new Port_decContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_port_dec);
		try {
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				input_dec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				output_dec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165);
				inout_dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_decContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SIGNED() { return getToken(LucidParser.SIGNED, 0); }
		public Struct_typeContext struct_type() {
			return getRuleContext(Struct_typeContext.class,0);
		}
		public List<Array_sizeContext> array_size() {
			return getRuleContexts(Array_sizeContext.class);
		}
		public Array_sizeContext array_size(int i) {
			return getRuleContext(Array_sizeContext.class,i);
		}
		public Input_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterInput_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitInput_dec(this);
		}
	}

	public final Input_decContext input_dec() throws RecognitionException {
		Input_decContext _localctx = new Input_decContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_input_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_la = _input.LA(1);
			if (_la==SIGNED) {
				{
				setState(168);
				match(SIGNED);
				}
			}

			setState(171);
			match(T__10);
			setState(173);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(172);
				struct_type();
				}
			}

			setState(175);
			name();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(176);
				array_size();
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_decContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SIGNED() { return getToken(LucidParser.SIGNED, 0); }
		public Struct_typeContext struct_type() {
			return getRuleContext(Struct_typeContext.class,0);
		}
		public List<Array_sizeContext> array_size() {
			return getRuleContexts(Array_sizeContext.class);
		}
		public Array_sizeContext array_size(int i) {
			return getRuleContext(Array_sizeContext.class,i);
		}
		public Output_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterOutput_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitOutput_dec(this);
		}
	}

	public final Output_decContext output_dec() throws RecognitionException {
		Output_decContext _localctx = new Output_decContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_output_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_la = _input.LA(1);
			if (_la==SIGNED) {
				{
				setState(182);
				match(SIGNED);
				}
			}

			setState(185);
			match(T__11);
			setState(187);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(186);
				struct_type();
				}
			}

			setState(189);
			name();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(190);
				array_size();
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inout_decContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode SIGNED() { return getToken(LucidParser.SIGNED, 0); }
		public Struct_typeContext struct_type() {
			return getRuleContext(Struct_typeContext.class,0);
		}
		public List<Array_sizeContext> array_size() {
			return getRuleContexts(Array_sizeContext.class);
		}
		public Array_sizeContext array_size(int i) {
			return getRuleContext(Array_sizeContext.class,i);
		}
		public Inout_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inout_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterInout_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitInout_dec(this);
		}
	}

	public final Inout_decContext inout_dec() throws RecognitionException {
		Inout_decContext _localctx = new Inout_decContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_inout_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_la = _input.LA(1);
			if (_la==SIGNED) {
				{
				setState(196);
				match(SIGNED);
				}
			}

			setState(199);
			match(T__12);
			setState(201);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(200);
				struct_type();
				}
			}

			setState(203);
			name();
			setState(207);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(204);
				array_size();
				}
				}
				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_nameContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Param_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterParam_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitParam_name(this);
		}
	}

	public final Param_nameContext param_name() throws RecognitionException {
		Param_nameContext _localctx = new Param_nameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_param_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			name();
			setState(213);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(211);
				match(T__13);
				setState(212);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_constraintContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Param_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterParam_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitParam_constraint(this);
		}
	}

	public final Param_constraintContext param_constraint() throws RecognitionException {
		Param_constraintContext _localctx = new Param_constraintContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_param_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_sizeContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Array_sizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterArray_size(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitArray_size(this);
		}
	}
